compile_fail_tests/scan/break_in_body.stderr
error[E0080]: evaluation panicked: break is not allowed because a value must be written into every array element
  --> compile_fail_tests/scan/break_in_body.rs:13:5
   |
13 |     test([1]);
   |     ^^^^^^^^^ evaluation of `_` failed inside this call
   |
note: inside `test::<1>`
  --> compile_fail_tests/scan/break_in_body.rs:4:5
   |
 4 | /     scan!(input, 0, |_, _| {
 5 | |         if true {
 6 | |             break;
...  |
 9 | |     })
   | |______^ the failure occurred here
   = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `scan` (in Nightly builds, run with -Z macro-backtrace for more info)
